2004-08-30  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer-attachment-bar.c (emcab_popup): em-popup based
	popup menu to replace the gnome one.
	(popup_menu_event): use new func above.
	(button_press_event): ", some cleanup.

2004-06-18  Not Zed  <NotZed@Ximian.com>

	** Fix for #60387.

	* mail-composer-errors.xml: added an error for failing to retrieve
	to-be-attached messages.

	* e-msg-composer.c (message_rfc822_dnd): remove this, we only want
	to treat it as a real rfc822 message, not a berkeley mailbox.
	(drag_data_received): handle the rfc822 type here, and also the
	new x-uid-list type.
	(attach_message): helper set a description on attached messages.

2004-06-16  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c (e_msg_composer_guess_mime_type): clean up the
	code slightly.

	* evolution-composer.c (impl_Composer_set_headers): Fix all the
	strn?casecmp calls.

	* e-msg-composer.c (from_changed_cb, drag_data_received) 
	(is_special_header, e_msg_composer_new_with_message) 
	(handle_mailto, e_msg_composer_new_from_url): as above.

	* e-msg-composer-attachment.c (e_msg_composer_attachment_new): as
	above.

	* e-msg-composer.c (drag_data_received): handle comments in uri
	lists.

2004-06-14  Jeffrey Stedfast  <fejj@novell.com>

	* e-msg-composer.c (create_composer): Don't connect to the
	key_pressed_event.
	(composer_key_pressed): Removed. We don't want to close the
	compose on Escape. To do so would violate the HIG.

2004-06-07  Dan Winship  <danw@novell.com>

	* e-msg-composer.c (pixcache): s/stock_save_as/stock_save-as/

2004-06-04  Jeffrey Stedfast  <fejj@novell.com>

	* e-msg-composer.c (create_composer): Use e_error_run() instead of
	the e_activation_error_dialog() stuff that no longer exists.

2004-06-03  Radek Doulik  <rodo@ximian.com>

	* e-msg-composer.c (e_msg_composer_show_sig_file): always insert
	new paragraph for signature

	Fixes #37601

2004-05-27  Jeffrey Stedfast  <fejj@novell.com>

	* mail-composer-errors.xml: s/${0}/{0}/g
